--- a/app/views/statuses/index.html.erb
+++ b/app/views/statuses/index.html.erb
@@ -1,2 +1,6 @@
-<h1>Statuses#index</h1>
-<p>Find me in app/views/statuses/index.html.erb</p>
+<!-- <h1>Statuses#index</h1>
+<p>Find me in app/views/statuses/index.html.erb</p> -->
+
+<% @statuses.each do |s| %>
+<p><%= s.body %></p>
+<% end %> 
