--- a/app/views/statuses/index.html.erb
+++ b/app/views/statuses/index.html.erb
@@ -1,6 +1,9 @@
 <!-- <h1>Statuses#index</h1>
 <p>Find me in app/views/statuses/index.html.erb</p> -->
 
+<% link_to 'Previous page', page: @page - 1 %>
+<%= link_to 'Next page', page: @page + 1 %>
+
 <% @statuses.each do |s| %>
 <p><%= s.body %></p>
-<% end %> 
+<% end %>
